changed the stocks app introduced react redux and set it up all is missing is the ui customization

--- a/src/Assets/stylesheets/stocksApp.scss
+++ b/src/Assets/stylesheets/stocksApp.scss
@@ -1,30 +1,91 @@
-
-.ChartContainer{
+@import url('https://fonts.googleapis.com/css?family=Merriweather');
+.ChartContainer {
     //-webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.39);
     //-moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.39);
     //box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.39);
-   // -webkit-box-shadow: 2vh 2vh 1.5vh 0 rgba(0,0,0,0.39);
-   // -moz-box-shadow: 2vh 2vh 1.5vh 0vh rgba(0,0,0,0.39);
+    // -webkit-box-shadow: 2vh 2vh 1.5vh 0 rgba(0,0,0,0.39);
+    // -moz-box-shadow: 2vh 2vh 1.5vh 0vh rgba(0,0,0,0.39);
     //box-shadow: 2vh 2vh 1.5vh 0vh rgba(0,0,0,0.39);
-   width: 160vh;
-   height: 40vh;
-   //position: absolute;
-   //top: 20%;
-   //left: 50%;
-   
+    width: 160vh;
+    height: 40vh; //position: absolute;
+    //top: 20%;
+    //left: 50%;
 }
-.GridError{
+
+.GridError {
     opacity: .5;
     z-index: -1;
 }
-.SearchError{
-    
-    width: 44vh;
-    height: 44vh;
-    background-color: #7E8F7C;
-    position: absolute;
-    top: 30%;
-    left: 40%;
-    transform: translate(-30%, -40%);
+
+.containerApp {
+    background: #74AFAD;
+}
+
+.containerElements {
+    display: flex;
+    flex-direction: row wrap;
+    flex-wrap:wrap;
+}
+
+.SearchErrorhidden {
+    display: none;
+}
+
+.SearchError {
+    text-align: center;
     z-index: 3;
+    margin-left: 50vh;
+    margin-top: 4vh;
+    border-radius: 4vh;
+    border: 0.4vh solid;
+    width: 40vh;
+    height: 30vh;
+}
+
+.headerText {
+    font-size: 6vh;
+    font-family: 'Merriweather', serif;
+}
+
+.noChart {
+    width: 40vh;
+    height: 30vh;
+    background-color: #ECECEA;
+}
+
+.chartVis {
+    background-color: #ECECEA;
+    width: 80vh;
+    height: 40vh;
+    // sent to above container
+    &:nth-child(odd) {
+        align-items: flex-end;
+        justify-content: flex-end;
+    }
+    &:nth-child(even) {
+        align-items: flex-start;
+        justify-content: flex-start;
+    }
+    &.first-child {
+        //border-top:none;
+        border-top: 1vh;
+    }
+    &.last-child {
+        //border-bottom:none;
+        border-bottom: 2vh;
+    }
+    &:nth-child(odd) {
+        z-index: 100; //background:#EBEBEB;
+        margin-left: 2vh;
+        transform: translate(2vh, 2vh);
+        transition: all 1s;
+    }
+    &:nth-child(even) {
+        margin-right: 2vh;
+        z-index: 100;
+        transform: translate(4vh, 4vh);
+        transition: all 1s;
+    }
+
+    //
 }
