finished what i could do for stocks challenge

--- a/src/Assets/stylesheets/base.scss
+++ b/src/Assets/stylesheets/base.scss
@@ -19,7 +19,7 @@ a.linksStocks:link{
 
 }
 a.linksStocks:visited, .linksStocks:hover,.linksStocks:active {
-    color:#FF3D00;
+    color:#FF9100;
 }
 
 
