added babel to server and started the nightlife challenge. Deleted the headers on diferent challenges and one header component to be reused

--- a/src/Assets/stylesheets/stocksApp.scss
+++ b/src/Assets/stylesheets/stocksApp.scss
@@ -33,7 +33,7 @@
     height: 30vh;
 }
 
-.headerText {
+.headerTextStock {
     font-size: 4ex !important;
     font-family: 'Merriweather', serif !important;
     background-color: #558C89 !important;
