made some changes to the login component

--- a/src/Assets/stylesheets/votingApp.scss
+++ b/src/Assets/stylesheets/votingApp.scss
@@ -31,3 +31,12 @@
     flex-wrap: wrap;
     
 }
+.loginTabPos{
+    margin-left: 2vw;
+}
+.ruleLoginPos{
+    width: 90%;
+}
+.textLoginPos{
+    text-align: center;
+}
