--- a/src/Assets/stylesheets/base.scss
+++ b/src/Assets/stylesheets/base.scss
@@ -21,7 +21,11 @@
     color:#49507a;
     
 }
-
+.footer-night{
+    @extend .footer;
+    position: relative;
+    color: #ffffff;
+}
 a.linkPins:link{
     color:#49507a;
 }
@@ -35,6 +39,15 @@ a.linksStocks:visited, .linksStocks:hover,.linksStocks:active {
     color: #3e2723;
 }
 
+a.linksNights:link{
+    color:#ffffff;
+}
+a.linksNights:visited, .linksNights:hover,.linksNights:active{
+    color: rgba(81, 92, 156, 0.747);
+}
+a.linksNights:link{
+    color: #ffffff;
+}
 
 .textChallenges{
     font-family: 'Oswald',sans-serif;
@@ -126,4 +139,21 @@ a.linksStocks:visited, .linksStocks:hover,.linksStocks:active {
     text-align: center;
     font-family:  'Oswald',sans-serif;
     font-size: 4vh;
+}
+.containerFccApp{
+    margin-top: 3vh;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: space-around;
+    justify-content: space-around;
+    align-items: center;
+}
+// body{
+//     background-color: rgb(14, 54, 73);    
+// }
+.buttonApp{
+    width: 10vw;
+    height: 10vh;
+    padding-top: 5vh;
 }
