--- a/src/Assets/stylesheets/books.scss
+++ b/src/Assets/stylesheets/books.scss
@@ -33,6 +33,8 @@
 .preloaderText{
     text-align: center;
     font-family: 'Roboto', sans-serif;
-    font-size: 4rem;
-    
+    font-size: 4rem; 
 }
+// body{
+//     background-color: #37474F;
+// }
