--- a/src/Assets/stylesheets/stocksApp.scss
+++ b/src/Assets/stylesheets/stocksApp.scss
@@ -34,6 +34,7 @@
     margin-left: auto;
     margin-right: auto;
 }
+
 .dataItem{
     display: inline-block;
     width: 25vw;
@@ -86,3 +87,6 @@
     margin-left: 10vw;
     margin-right: auto;
 }
+// body{
+//     background-color: #4CAF50;
+// }
